<resources>
    <string name="app_name">Read</string>
    <string name="login_title">Log in to Read</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="log_in_button">Log In</string>
    <string name="forgot_password_button">Forgot password?</string>
    <string name="dont_have_account_hint">Don’t have account?</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_title">Create an account</string>
    <string name="name_hint">Name</string>
    <string name="create_account">Create account</string>
    <string name="privacy_policy_pre_text">By signing up, you agree to our </string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log In</string>
    <string name="name_regex">[A-Z][a-z]+[[:space:]][A-Z][a-z]+</string>
    <string name="user_name">Full Name</string>
    <string name="user_stats_titles">Titles</string>
    <string name="user_stats_followers">Followers</string>
    <string name="user_stats_likes">Likes</string>
    <string name="user_avatar_content_description">User Avatar</string>
    <string name="button_back_content_description">Button Back</string>
    <string name="button_more_content_description">Button More</string>
    <string name="titles_count_tmp">18</string>
    <string name="followers_count_tmp">241</string>
    <string name="likes_count_tmp">17.1k</string>
    <string name="create_new_title_button">Create new</string>
    <string name="log_out">Log Out</string>
    <string name="change_avatar">Change avatar</string>
    <string name="change_avatar_title">Avatar</string>
    <string name="change_avatar_hint">Everyone can see your avatar next to your name. You can change your avatar any time.</string>
    <string name="finish">Finish</string>
    <string name="avatar_content_description">Avatar</string>
    <string name="close_activity_content_description">Close Activity</string>
    <string name="privacy_policy_title">Privacy Policy</string>
    <string name="reset_password_button">Reset password</string>
    <string name="forgot_password_header">Forgot password</string>
    <string name="sending">Sending..</string>
    <string name="sent">Sent</string>
    <string name="failed">Failed</string>
    <string name="incorrect_login">Incorrect email or password</string>
    <string name="failed_to_register">Failed to register.</string>
    <string name="show_password_content_description">Show/Hide Password Button</string>
    <string name="anonymous_user_button_content_description">Anonymous User Button</string>
    <string name="search_content_description">Search</string>
    <string name="tab_new">New</string>
    <string name="tab_recommended">Recommended</string>
    <string name="tab_top">Top</string>
    <string name="tab_followed">Followed</string>
    <string name="tmp_title_panel_header">The Summer House</string>
    <string name="tmp_title_panel_author">James Patterson</string>
    <string name="tmp_title_panel_body">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don’t look even slightly believable.</string>
    <string name="title_stats_reads">Reads</string>
    <string name="title_stats_likes">Likes</string>
    <string name="time_to_read">Time</string>
    <string name="time_to_read_tmp">8m</string>
    <string name="_12k">12k</string>
    <string name="save">Save</string>
    <string name="save_draft">Save as Draft</string>
    <string name="saved">Saved</string>
    <string name="long_text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. \n\nLorem Ipsum comes from sections 1.10.32 and 1.10.33 of “de Finibus Bonorum et Malorum” (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, “Lorem ipsum dolor sit amet..”, comes from a line in section 1.10.32. \n\nThe standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from “de Finibus Bonorum et Malorum” by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham. \n\nLorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry’s standard dummy text ever since the 1500s. Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. \n\nRichard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of “de Finibus Bonorum et Malorum” (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. \n\nThe first line of Lorem Ipsum, “Lorem ipsum dolor sit amet..”, comes from a line in section 1.10.32. The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from “de Finibus Bonorum et Malorum” by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.</string>
    <string name="like">Like</string>
    <string name="button_up_content_description">Button Up</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Description</string>
    <string name="text_hint">Text</string>
    <string name="publish">Publish</string>
    <string name="published">Published!</string>
    <string name="tab_published">Published</string>
    <string name="tab_draft">Draft</string>
    <string name="tab_liked">Liked</string>
    <string name="tab_saved">Saved</string>
    <string name="edit">Edit</string>
    <string name="follow">Follow</string>
    <string name="illustration_content_description">Illustration</string>
    <string name="offer_to_login">Sign Up to like and save favorite titles or follow loved authors!</string>
    <string name="sign_up">Sign Up</string>
    <string name="you_liked_it">You liked it!</string>
    <string name="you_saved_it">You saved it!</string>
    <string name="you_following">Following</string>
    <string name="change_name">Change Name</string>
    <string name="name">Name</string>
    <string name="change_password">Change password</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="confirm_new_password">Confirm new password</string>
    <string name="password_updated">Password has been updated!</string>
    <string name="submit">Submit</string>
    <string name="delete">Delete</string>
    <string name="successfully_deleted">The title was successfully deleted</string>
    <string name="loading_error">Something went wrong. Try again later.</string>
    <string name="wrong_password">Wrong password</string>
    <string name="invalid_password">Invalid password</string>
    <string name="title_not_published">Title has not published yet.</string>
</resources>