<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity"
    android:background="@color/colorBackground">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:theme="@style/ToolBarStyle"
        app:popupTheme="@style/AppTheme"
        android:background="@color/colorBackground"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_form"
        android:layout_marginTop="70dp"
        android:showDividers="middle"
        android:gravity="center"
        android:padding="@dimen/mainPadding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_title"
            android:textSize="@dimen/headerFontSize"
            android:textColor="@color/colorFontMain"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight"
            android:background="@drawable/edit_text_background"
            android:hint="@string/name_hint"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="textCapWords"
            android:maxLength="@integer/nameMaxLength"
            android:importantForAutofill="no"
            android:textSize="@dimen/editTextFontSize"
            android:textColor="@color/colorFontMain"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email_hint"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:inputType="textEmailAddress"
            android:maxLength="@integer/emailMaxLength"
            android:importantForAutofill="no"
            android:textSize="@dimen/editTextFontSize"
            android:textColor="@color/colorFontMain"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemHeight"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password_hint"
                android:paddingStart="20dp"
                android:paddingEnd="60dp"
                android:inputType="textPassword"
                android:maxLength="@integer/passwordMaxLength"
                android:importantForAutofill="no"
                android:textSize="@dimen/editTextFontSize"
                android:textColor="@color/colorFontMain"/>

            <ImageButton
                android:id="@+id/showPasswordButton"
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                android:src="@drawable/ic_eye"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/show_password_content_description"
                android:onClick="onClickShowHidePassword"/>

        </RelativeLayout>

        <room106.app.read.views.MainButton
            android:id="@+id/createAccountButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:text="@string/create_account"
            android:enabled="false"
            android:onClick="onClickCreateAccount"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="0dp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy_pre_text"
                android:textSize="@dimen/hintFontSize"
                android:textColor="@color/colorFontSub"/>

            <room106.app.read.views.HintButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-5dp"
                android:text="@string/privacy_policy"
                android:textColor="@color/colorAccent"
                android:onClick="onClickShowPrivacyPolicy"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingBottom="@dimen/mainPadding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="@dimen/hintFontSize"
            android:textColor="@color/colorFontSub"/>

        <room106.app.read.views.HintButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-12dp"
            android:text="@string/log_in"
            android:textColor="@color/colorAccent"
            android:onClick="onClickGoToLogin"
            android:textStyle="bold"/>

    </LinearLayout>

</RelativeLayout>