<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".activities.LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:theme="@style/ToolBarStyle"
        app:popupTheme="@style/AppTheme"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="@drawable/divider_form"
        android:layout_marginTop="50dp"
        android:showDividers="middle"
        android:gravity="center"
        android:padding="@dimen/mainPadding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_title"
            android:textSize="@dimen/headerFontSize"
            android:textColor="@color/colorFontMain"
            android:fontFamily="@font/cabin_semi_bold"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email_hint"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:maxLength="@integer/emailMaxLength"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:textSize="@dimen/editTextFontSize"
            android:textColor="@color/colorFontMain"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight">

            <EditText
                android:id="@+id/passwordEditText"
                android:layout_width="match_parent"
                android:layout_height="@dimen/itemHeight"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password_hint"
                android:paddingStart="20dp"
                android:paddingEnd="60dp"
                android:inputType="textPassword"
                android:importantForAutofill="no"
                android:maxLength="@integer/passwordMaxLength"
                android:textSize="@dimen/editTextFontSize"
                android:textColor="@color/colorFontMain" />

            <ImageButton
                android:id="@+id/showPasswordButton"
                android:layout_width="@dimen/iconSize"
                android:layout_height="@dimen/iconSize"
                android:src="@drawable/ic_eye"
                android:background="@null"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/show_password_content_description"
                android:onClick="onClickShowHidePassword"/>

        </RelativeLayout>

        <room106.app.read.views.MainButton
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight"
            android:text="@string/log_in_button"
            android:enabled="false"
            android:onClick="onClickLogIn"/>

        <room106.app.read.views.HintButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-10dp"
            android:text="@string/forgot_password_button"
            android:textColor="@color/colorFontSub"
            android:onClick="onClickForgotPassword"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:paddingBottom="@dimen/mainPadding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_account_hint"
            android:textSize="@dimen/hintFontSize"
            android:textColor="@color/colorFontSub"
            android:fontFamily="@font/cabin_semi_bold"/>

        <room106.app.read.views.HintButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-8dp"
            android:text="@string/sign_up_button"
            android:textColor="@color/colorAccent"
            android:onClick="onClickGoToSignUp"/>

    </LinearLayout>

</RelativeLayout>