<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResetPasswordActivity"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:theme="@style/ToolBarStyle"
        app:popupTheme="@style/AppTheme"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:divider="@drawable/divider_form"
        android:showDividers="middle"
        android:orientation="vertical"
        android:padding="@dimen/mainPadding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_header"
            android:textSize="@dimen/headerFontSize"
            android:textColor="@color/colorFontMain"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight"
            android:background="@drawable/edit_text_background"
            android:hint="@string/email_hint"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:maxLength="@integer/emailMaxLength"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:textSize="@dimen/editTextFontSize"
            android:textColor="@color/colorFontMain"/>

        <room106.app.read.views.MainButton
            android:id="@+id/resetPasswordButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:text="@string/reset_password_button"
            android:enabled="false"
            android:onClick="onClickSendResetPasswordEmail"/>

    </LinearLayout>
</LinearLayout>