<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangeNameActivity"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:theme="@style/ToolBarStyle"
        app:popupTheme="@style/AppTheme"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/mainPadding">

        <TextView
            android:id="@+id/changeNameHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_name"
            android:textSize="@dimen/headerFontSize"
            android:textColor="@color/colorFontMain"
            android:fontFamily="@font/cabin_semi_bold"/>

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight"
            android:layout_marginTop="@dimen/form_divider_size"
            android:layout_below="@id/changeNameHeader"
            android:background="@drawable/edit_text_background"
            android:hint="@string/name"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:maxLength="@integer/emailMaxLength"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no"
            android:textSize="@dimen/editTextFontSize"
            android:textColor="@color/colorFontMain"/>

        <room106.app.read.views.MainButton
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/buttonHeight"
            android:text="@string/save"
            android:layout_alignParentBottom="true"
            android:enabled="false"
            android:onClick="onClickSave"/>

    </RelativeLayout>
</LinearLayout>