<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ChangePasswordActivity"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:theme="@style/ToolBarStyle"
        app:popupTheme="@style/AppTheme"
        app:menu="@menu/submit_menu"
        android:background="@color/colorBackground"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/mainPadding">

        <TextView
            android:id="@+id/changePasswordHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:textSize="@dimen/headerFontSize"
            android:textColor="@color/colorFontMain"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/oldPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight"
            android:layout_below="@id/changePasswordHeader"
            android:layout_marginTop="@dimen/form_divider_size"
            android:background="@drawable/edit_text_background"
            android:hint="@string/old_password"
            android:paddingStart="20dp"
            android:paddingEnd="60dp"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:maxLength="@integer/passwordMaxLength"
            android:textSize="@dimen/editTextFontSize"
            android:textColor="@color/colorFontMain" />

        <EditText
            android:id="@+id/newPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight"
            android:layout_below="@id/oldPasswordEditText"
            android:layout_marginTop="@dimen/form_divider_size"
            android:background="@drawable/edit_text_background"
            android:hint="@string/new_password"
            android:paddingStart="20dp"
            android:paddingEnd="60dp"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:maxLength="@integer/passwordMaxLength"
            android:textSize="@dimen/editTextFontSize"
            android:textColor="@color/colorFontMain" />

        <EditText
            android:id="@+id/confirmNewPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/itemHeight"
            android:layout_below="@id/newPasswordEditText"
            android:layout_marginTop="@dimen/form_divider_size"
            android:background="@drawable/edit_text_background"
            android:hint="@string/confirm_new_password"
            android:paddingStart="20dp"
            android:paddingEnd="60dp"
            android:inputType="textPassword"
            android:importantForAutofill="no"
            android:maxLength="@integer/passwordMaxLength"
            android:textSize="@dimen/editTextFontSize"
            android:textColor="@color/colorFontMain" />

    </RelativeLayout>
</LinearLayout>